# stock_microservice

./: .dockerignore  Cargo.toml  Dockerfile  Makefile  README.md
src/: main.rs  prelude.rs  stock.rs
